Don't run colorcorrectlocationupdater unnecessarily

Don't run the colorcorrectlocationupdater kded module when the user is not using Automatic location for Night Color. The module would not have attempted geolocation in that case anyway, but having it show as running would be misleading, as it would give the impression that geolocation was actually happening despite the user having disabled it, which isn't the case.

BUG: 459446

FIXED-IN: 5.27

---

# Test Plan

## Case 1: Already on Automatic location

1. Change the mode to automatic *before* installing any of the changes in this MR. Ensure ~/.config/kded5rc does not have a `[Module-colorcorrectlocationupdater]` group.
2. Build and install MR.
3. Restart system.
4. Check that the "Automatic Location for Night Color" service is running and set to autoload, in System Settings > Background Services.

**NOTE:** The Background Services KCM does not auto-reload changes to service status. You need to close and open the KCM for it to pick up on those.

## Case 2: Already not on automatic location

1. Change the mode to something other than automatic *before* installing any of the changes in this MR. Ensure ~/.config/kded5rc does not have a `[Module-colorcorrectlocationupdater]` group.
2. Build and install MR.
3. Restart system.
4. Check that the "Automatic Location for Night Color" service is *not* running and autoload is *disabled*, in System Settings > Background Services.

**NOTE:** If you've already tested Case 1: enabling autoload of the service from System Settings > Background Services, then installing the old versions of libcolorcorrect (colorcorrectlocationupdater) and the Night Color KCM, then restarting, should give you a system which is in the "before installing this MR" state.

## Case 3: Switching back and forth

1. Build and install MR.
2. In System Settings > Night Color, change between Automatic and non-Automatic modes and apply.
3. Check that the "Automatic Location for Night Color" service is correctly running/not-running and autoload is enabled/disabled, in System Settings > Background Services.
4. Repeat for back-and-forth.