kcms/nightcolor/kcm.h
@@ -37,6 +37,9 @@ private:
     int maxDayTemp;
     int minNightTemp;
     int maxNightTemp;
+
+public Q_SLOTS:
+    void save() override;
 };
 
 }
